# grumpi

./: .gitignore  3.4  CHANGELOG.md  DOCUMENTATION.md  LICENSE  Plan.md  README.md  claim verification.md  config.toml.example  configuration_wizard.py  install.bat  install.sh  install_core.py  plan01.md  pyproject.toml  realitycheck1.sty  requirements.txt  run.bat  run.sh  test_ollama.py  test_request.json
client_examples/: README.md  chat_app.py  lord_of_discord.py  requirements.txt  simple_client.py  streaming_client.py
client_examples/chat_app/: README.md  chat_app.py
client_examples/db_builder/: app_config.json  db_builder.py  requirements.txt
client_examples/image_client/: README.md  image_client.py
client_examples/json_validator/: json_validator_app.py
client_examples/lord_of_discord/: README.md  lord_of_discord.py
client_examples/simple_client/: simple_client.py
client_examples/streaming_client/: README.md  streaming_client.py
client_examples/web/: README.md  index.html  lollms-client.js  script.js  style.css
examples/bindings/: dalle_binding.py  dummy_binding.py  ollama_binding.py  openai_binding.py
examples/personalities/python_builder_executor/scripts/: workflow.py
examples/personalities/scripted_example/: config.yaml
examples/personalities/scripted_example/scripts/: workflow.py
gui 1/: index.html  script.js  style.css
libraries_docs/: ascii_colors.md  configguard.md
lollms_server/: main.py
lollms_server/api/: endpoints.py  models.py
lollms_server/core/: __init__.py  bindings.py  config.py  functions.py  generation.py  personalities.py  resource_manager.py  security.py
lollms_server/utils/: dependency_manager.py  file_utils.py  helpers.py
personal_personalities/my_cool_bot/: config.yaml
scripts/: run_server.sh
tests/: conftest.py
tests/api/: test_endpoints.py
tests/core/: test_config.py  test_resource_manager.py  test_security.py
tests/utils/: test_file_utils.py  test_helpers.py
utilities_examples/: folder_extractor.py  url_parser.py
utilities_examples/folder_extractor/: folder_extractor.py
utilities_examples/scrape_master/: scrape_master.py
webui/: README.md  codenew.html  codeold.html  index.html  instructionsforoldandnewcode.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.vue  main.ts
webui/src/assets/: main.css
webui/src/components/: BindingsView.vue  ConfigView.vue  ConnectionManager.vue  DashboardView.vue  FunctionsView.vue  GenerateView.vue  ModelsView.vue  PersonalitiesView.vue
webui/src/router/: index.ts
webui/src/stores/: main.ts
webui/src/views/: ChatView.vue  HomeView.vue
zoos/bindings/: dalle_binding.py  diffusers_binding.py  dummy_binding.py  gemini_binding.py  hf_binding.py  llamacpp_binding.py  ollama_binding.py  openai_binding.py
zoos/bindings/dalle_binding/: __init__.py  binding_card.yaml
zoos/bindings/diffusers_binding/: __init__.py  binding_card.yaml
zoos/bindings/dummy_binding/: __init__.py  binding_card.yaml
zoos/bindings/gemini_binding/: __init__.py  binding_card.yaml
zoos/bindings/gemini_image_binding/: __init__.py  binding_card.yaml
zoos/bindings/hf_binding/: __init__.py  binding_card.yaml
zoos/bindings/llamacpp_binding/: __init__.py  binding_card.yaml
zoos/bindings/ollama_binding/: __init__.py  binding_card.yaml
zoos/bindings/openai_binding/: __init__.py  binding_card.yaml
zoos/personalities/artbot/: config.yaml
zoos/personalities/artbot/scripts/: workflow.py
zoos/personalities/lollms/: config.yaml
zoos/personalities/python_builder_executor/: config.yaml
zoos/personalities/python_builder_executor/scripts/: workflow.py
zoos/personalities/scripted_example/: config.yaml
zoos/personalities/scripted_example/scripts/: workflow.py
